--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "prettier": "prettier --write ."
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
@@ -13,21 +14,30 @@
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~42.0.1",
+    "expo-font": "~9.2.1",
+    "expo-linear-gradient": "^9.2.0",
     "expo-status-bar": "~1.0.4",
+    "native-base": "^3.0.7",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-pager-view": "^5.4.0",
     "react-native-paper": "^4.9.2",
     "react-native-reanimated": "^2.2.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-web": "~0.13.12"
+    "react-native-svg": "12.1.1",
+    "react-native-tab-view": "^3.1.1",
+    "react-native-web": "~0.13.12",
+    "styled-components": "^5.3.0",
+    "styled-system": "^5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "prettier": "2.3.2",
+    "prettier": "^2.3.2",
     "typescript": "~4.0.0"
   },
   "private": true
