--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "link": "react-native link react-native-webview"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.5",
@@ -16,6 +17,7 @@
     "expo": "~42.0.1",
     "expo-font": "~9.2.1",
     "expo-linear-gradient": "^9.2.0",
+    "expo-linking": "^2.3.1",
     "expo-status-bar": "~1.0.4",
     "native-base": "^3.0.7",
     "react": "16.13.1",
@@ -30,6 +32,7 @@
     "react-native-svg": "12.1.1",
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "~0.13.12",
+    "react-native-webview": "^11.13.0",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5"
   },
